# ChangeLog for x11-misc/trivdm
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*trivdm-0_p20110921 (23 Sep 2011)

  23 Sep 2011; Michael Weber <xmw@gentoo.org> +files/trivdm-0_p20110921,
  +trivdm-0_p20110921.ebuild, +metadata.xml:
  Initial import
