@@ -1,14 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+- -----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX trivdm-0_p20110921 2319 RMD160 d5ea44d05528ee0d6d3a6f27d8bb00bd513fce5d SHA1 21cb08d686d6c9c8cb157660f903e9ae2e496b01 SHA256 eae817ac58331265e5f73c7d154e14524b90417a3560c826da4b55b49fe95a42
+AUX trivdm-0_p20110927 2435 RMD160 7430356d28715ee4062d434da4fd18f1df9c79b1 SHA1 b8b11db1314ab9404e8bcafc9c86b3cab39cab85 SHA256 33e54114644860dc4aced2935e72d0188f016dbff5191f3fde4e70dbbb380cc6
 EBUILD trivdm-0_p20110921.ebuild 1372 RMD160 e03319f38b7e6d5398b7d9ad70f19cecefa4bb98 SHA1 4d9946e7c0ff322e9600526be021151dc9ab8347 SHA256 28a5980ee288a5dff6ca820da6272567ff841d61bafd35f9a29b0b42c7025135
-MISC ChangeLog 287 RMD160 7e59711261ef173fc9fd22be4ca0bbb0d2059df5 SHA1 3cb44a28290f92c95ebcd78065ca14de52d60876 SHA256 5f3667a5fb992b6d5366ff5bd8eabf3a28f12e8b698a8d17bd183f1b2585dfe5
+EBUILD trivdm-0_p20110927.ebuild 1430 RMD160 25be98eeb10527e26be5126aabe585cbbed68318 SHA1 794da6899cd0b6c883141e574dee65759287dbfa SHA256 ad040c7033142c823ca27c66b392e6371f6afd8af5c45d170720001779226113
+MISC ChangeLog 463 RMD160 a2bf88f9761720e6d5dbc25c27b4b049bfd87abe SHA1 cf38de624c7dff5398883e5af0ee958a63f72db6 SHA256 2f05250a79307c84dbc3ae46a8eebca2415141760ebbeab9c70cd1d898478c22
 MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
+- -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk6CRN0ACgkQknrdDGLu8JCVPwD/VQDOBMHu+ifAI5orQGVbxcQQ
+MSfhzp6j+7PYMsGf+RUA/0rC0dbMfxo4Iw5H2vM+/+bipPyvtqKqzUCizWQi74CB
+=aXXm
+- -----END PGP SIGNATURE-----
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk59AzIACgkQknrdDGLu8JAtOwD+PMfXdsC+gxXHrKIist1Py4sm
-nA6ftWSxCb5BNmLBV5MA/2OEDy6JDQUY7uISQf4Z5b/piVVEkZjPkox9YzUxT+W/
-=8FNu
+iF4EAREIAAYFAk6CRToACgkQknrdDGLu8JC4oAD/b20CGtoY0PIG+cIQODS/lb1h
+ecrcLkx/F8XHRjbZd+4A/jRBFRJHeveIkRTC169UltoxuuDJulFNGkHUY0rPLePn
+=XwBm
 -----END PGP SIGNATURE-----
